Stop screaming the constants name, makes it hard to read

--- a/styles/site.css
+++ b/styles/site.css
@@ -897,6 +897,10 @@ div.refsect1 span.term {
 	border-bottom: groove 1px #dddddd;
 }
 
+div.refsect1 span.term b tt {
+	font-size: 0.9em;
+}
+
 div.classsynopsisinfo_comment {
 	text-indent: 30px;
 	padding-top: 2em;
